# python_libre_pythonista_ext

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  cspell.json  make.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  docker_no_cache.sh  readme.md  startup.sh
.devcontainer/lo_only/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/lo_sdk/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/res/defaults/: README.md  registrymodifications.xcu
.devcontainer/res/ext/: MRI-1.3.4.oxt  README.md  apso.oxt
.devcontainer/res/req/: README.md  requirements.txt
.devcontainer/res/scripts/: ext.sh  gitget.sh  lo_console.py  lo_init.sh  reload.sh  unlock.sh
.devcontainer/root/: bash_custom.sh  bashrc.sh  rc.sh
.devcontainer/root/defaults/: autostart
Documents/: Hello World.odt  hello.txt  melt.ods
Documents/Examples/Calc/: Student_chart.ods  chartsData.ods  melt.ods  plot_Dolphins.ods  plot_Triinterp.ods
Documents/md/: edit_code.md  pyc.md
app/: hello.py
examples/calc/build_table/: Makefile  README.md  builder.ods  config.json  run.py  tbl_builder.py
examples/calc/odev_add_range_data/: Makefile  README.md  config.json  odev_add_range.ods  range_action.py  run.py  script.py
examples/calc/sudoku/: Makefile  README.md  calc-sudoku.ods  config.json  script.py
examples/chart2/Chart_2_Views/: README.md  chart_2_views.py  start.py
macro/: killable_progress.py  ooodev_ex.py  progress.py  script_forge_ex.py
oxt/: Accelerators.xcu  Addons.xcu  CalcAddIns.xcu  CalcToolBar.xcu  CalcWindowState.xcu  LICENSE-en.txt  ProtocolHandler.xcu  Views.xcu  WindowContentFactories.xcu  WriterWindowState.xcu  XPy.rdb  XPy2.rdb  XTest.rdb  contributors.txt  description.xml  job.xcu  libre_pythonista_loaded_job.py  libre_pythonista_loading_job.py  libre_pythonista_saving_job.py  libre_pythonista_unloading_job.py  libre_pythonista_view_job.py  py.py  py_impl.py  py_runner.py  python_impl.py  registration.components
oxt/___lo_pip___/: basic_config.py  config.py  initializer.py
oxt/___lo_pip___/adapter/: adapter_base.py  top_window_listener.py
oxt/___lo_pip___/bz2_config/: __init__.py  bz2_config.py
oxt/___lo_pip___/debug/: break_mgr.py  dbs.py  py_charm_break_mgr.py  viz_tracer_mgr.py
oxt/___lo_pip___/dialog/: count_down_dialog.py  dialog_base.py  file_open_dialog.py  folder_open_dialog.py  infinite_progress.py  message_dialog.py  name_input.py  run_time_dialog_base.py  temp_dialog.py
oxt/___lo_pip___/events/: command.py  event_singleton.py  lo_events.py
oxt/___lo_pip___/gen_util/: flatpak_util.py
oxt/___lo_pip___/info/: __init__.py  extension_info.py
oxt/___lo_pip___/input_output/: file_util.py  proc.py
oxt/___lo_pip___/install/: download.py  install_pip.py  install_pip_from_wheel.py  install_pkg.py  install_pkg_local.py  progress.py  requirements_check.py
oxt/___lo_pip___/job/: async_job_info.py
oxt/___lo_pip___/lo_util/: __init__.py  clipboard.py  configuration.py  gen_util.py  resource_resolver.py  resource_resolver_dummy.py  session.py  str_list.py  target_path.py  type_var.py  uno_context_mgr.py  util.py
oxt/___lo_pip___/meta/: constructor_singleton.py  singleton.py
oxt/___lo_pip___/oxt_logger/: __init__.py  logger_config.py  oxt_logger.py
oxt/___lo_pip___/proto/: event_observer.py
oxt/___lo_pip___/settings/: general_settings.py  install_settings.py  load_settings.py  lp_settings.py  pip_settings.py  settings.py
oxt/___lo_pip___/thread/: killable_thread.py  main_loop.py  runners.py  stoppable_thread.py
oxt/___lo_pip___/ver/: req_version.py  ver_info.py
oxt/config/: config.xcs  config.xcu  options.xcu
oxt/dialogs/: dlg1.xdl  example.xdl  install.xdl  log_dock.xdl  logging.xdl  lp_settings.xdl  options.xdl  uninstall.xdl
oxt/ext_code/impl/: doc_window_factory_impl.py  py_impl.py  py_impl2.py  py_impl_orig.py  python_editor.py  python_impl.py
oxt/ext_code/jobs/: cleanup_job.py  create_job.py  debug_job.py  debug_lp_job.py  focus_job.py  libre_pythonista_loading_job.py  libre_pythonista_saving_job.py  libre_pythonista_unloading_job.py  libre_pythonista_view_job.py  load_finished_job.py  (+13 more)
oxt/impl/: doc_window_factory_impl.py  py_impl.py  python_impl.py  testing_impl.py
oxt/jobs/: libre_pythonista_saving_job.py  libre_pythonista_unloading_job.py  libre_pythonista_view_job.py
oxt/resources/: pipstrings_de.properties  pipstrings_el.properties  pipstrings_en_US.properties  pipstrings_es.properties  pipstrings_fr.properties  pipstrings_hu.properties  pipstrings_it.properties  pipstrings_ja.properties  pipstrings_ko.properties  pipstrings_nl.properties  pipstrings_pt.properties  pipstrings_zh.properties
oxt/scripts/: mac_progress.py
oxt/sources/: XPy.idl  XPy2.idl  XTest.idl
src/: build.py  build_args.py  config.py  ext.update.xml  file_util.py
src/install/: pip_install_build.py  pre_install_pure.py
src/processing/: default_resource.py  json_config.py  packages.py  pre_packages.py  pre_packages_pure.py  req_packages.py  token.py  update.py
tdist/: LibrePythonista.oxt  update.xml
tests/: conftest.py
tests/general_tests/: test_packages.py  test_py_package.py
tests/test_cmd/: test_cmd_append_code.py  test_cmd_code_listener.py  test_cmd_doc_event.py  test_cmd_doc_lp_props.py  test_cmd_lp_doc_json_file.py  test_cmd_py_src.py  test_cmd_remove_ctl_props.py  test_cmd_sheet_activation.py  test_cmd_sheet_ensure_forms.py  test_cmd_sheets_modified.py
tests/test_cmd_qry/: test_handler_factories.py
tests/test_code/: _test_src_mgr.py  test_code_ast.py  test_src_mgr.py
tests/test_doc/: test_doc_init.py  test_globals.py
tests/test_init/: test_init_doc.py  test_init_sheet.py
tests/test_kind/: test_ctl_kind.py  test_rule_name_kind.py
tests/test_rules/: test_carrot.py  test_equals.py  test_equals_star.py  test_greater.py  test_greater_equal.py  test_lesser.py  test_lesser_equal.py  test_not_equals.py  test_tilde.py  test_tilde_eq.py  test_ver_rules.py  test_wildcard.py
tests/test_version/: test_comparrsion.py  test_req_version.py  test_requirements_check.py
(+1074 files in other folders)
