[project]
name = "LibrePythonista"
version = "0.9.0"
description = "Python For LibreOffice Calc"
readme = "README.md"
requires-python = ">=3.8"
license = {text="OSI Approved :: Apache Software License"}
keywords = ["pip", "libreoffice","uno", "pyuno"]
dependencies = [
    "ooo-dev-tools>=0.53.3",
    "oooenv>=0.2.4",
    "sortedcontainers>=2.4.0",
    "toml>=0.10.2",
    "typing-extensions>=4.12.2",
]
authors = [
    {name = ":Barry-Thomas-Paul: Moss", email = "librepythonista.lifter091@passmail.net"}]


# See: https://github.com/Amourspirit/python-libreoffice-pip/wiki/pyproject.toml
[tool.libre_pythonista.config]
general_code_name = "libre_pythonista"
cell_custom_prop_prefix = "libre_pythonista_"
cell_custom_prop_codename = "codename"
lp_default_log_format= "%(asctime)s - %(levelname)s - %(name)s: %(message)s"
# name of macro to run when sheet control button is clicked
# found in python/scripts/control_handler.py
macro_lp_sheet_ctl_click = "on_btn_action_preformed"
# name of macro to run when sheet is calculated
# found in python/scripts/share_event.py
macro_sheet_on_calculate = "formulas_calc"
py_script_sheet_ctl_click = "control_handler.py"
py_script_sheet_on_calculate = "share_event.py"
calc_props_json_name = "_calc_props.json" # name of the json file that holds the calc properties an is stored in the document. general_code_name is prepended to the name at runtime.
lp_code_dir = "librepythonista" # The directory where the libre_pythonista code is stored within the document.
flatpak_libre_pythonista_py_editor="io.github.amourspirit.LibrePythonista_PyEditor"
flatpak_libre_pythonista_py_editor_cell_cmd="cell_edit"
flatpak_libre_pythonista_py_editor_install_url="https://github.com/Amourspirit/LibrePythonista_PyEditor/wiki"
lp_py_cell_edit_sock_timeout=10 # number of seconds, default 10, to wait for the socket to connect the the cell py editor.

[tool.oxt.config]
auto_install_in_site_packages = true # https://tinyurl.com/ymeh4c9j#auto_install_in_site_packages
build_dir = "build" # https://tinyurl.com/ymeh4c9j#build_dir
dist_dir = "tmp_dist" # "dist" https://tinyurl.com/ymeh4c9j#dist_dir should be changed to something like dist, tmp_dist is not included in git
install_wheel = true # https://tinyurl.com/ymeh4c9j#install_wheel
oxt_name = "LibrePythonista" # https://tinyurl.com/ymeh4c9j#oxt_name
py_pkg_dir = "py_pkgs" # https://tinyurl.com/ymeh4c9j#py_pkg_dir
py_pkg_files = [] # https://tinyurl.com/ymeh4c9j#py_pkg_files
py_pkg_names = [] # ["ooodev", "ooo"] https://tinyurl.com/ymeh4c9j#py_pkg_names
token_file_ext = ["txt", "xml", "xcu", "xcs", "py","components", "json"] # https://tinyurl.com/ymeh4c9j#token_file_ext
tokes_files = [] # ["python_impl.py", "res_resolver.py", "py_code.py"] https://tinyurl.com/ymeh4c9j#tokes_files
update_file = "update.xml" # https://tinyurl.com/ymeh4c9j#update_file
zip_preinstall_pure = true # https://tinyurl.com/ymeh4c9j#zip_preinstall_pure
window_timeout = 5 # https://tinyurl.com/ymeh4c9j#window_timeout number of seconds to wait for window to appear
dialog_desktop_owned = false # https://tinyurl.com/ymeh4c9j#dialog_desktop_owned determines if the dialog is owned by the desktop window
resource_dir_name = "resources" # https://tinyurl.com/ymeh4c9j#resource_dir_name
resource_properties_prefix = "pipstrings" # https://tinyurl.com/ymeh4c9j#resource_properties_prefix
default_locale = ["en", "US"] # https://tinyurl.com/ymeh4c9j#default_locale
sym_link_cpython = true # https://tinyurl.com/ymeh4c9j#sym_link_cpython
uninstall_on_update = true # https://tinyurl.com/ymeh4c9j#uninstall_on_update uninstall previous python packages on update
install_on_no_uninstall_permission = true # https://tinyurl.com/ymeh4c9j#install_on_no_uninstall_permission
oo_types_uno = "" # https://tinyurl.com/ymeh4c9j#oo_types_uno
oo_types_office = "" # https://tinyurl.com/ymeh4c9j#oo_types_office
unload_after_install = false # https://tinyurl.com/ymeh4c9j#unload_after_install
run_imports = ["ooodev", "verr", "sortedcontainers"] # These are required for LibrePythonista dispatches to work. https://tinyurl.com/ymeh4c9j#run_imports
run_imports2 = ["pandas", "numpy", "matplotlib"] # second level imports. These are required for LibrePythonista to work
run_imports_linux = [] # https://tinyurl.com/ymeh4c9j#run_imports_linux
run_imports_macos = [] # https://tinyurl.com/ymeh4c9j#run_imports_macos
run_imports_win = [] # https://tinyurl.com/ymeh4c9j#run_imports_win
# when log_indent is set indent_str can be used in the format str - "%(asctime)s %(levelname)s - %(indent_str)s%(name)s: %(message)s"
log_indent = 0 # set to 0 or less to disable; Ignored in windows. Should be set to 0 for production.
no_pip_remove = ["pip", "setuptools", "wheel"] # https://tinyurl.com/ymeh4c9j#no_pip_remove
require_install_name_match = true # if true then an error will be raised if the installed package name does not match oxt_name
cmd_clean_file_prefix = "cleanup_"
pip_shared_dirs = ["bin", "lib", "include", "inc", "docs", "config"] # https://tinyurl.com/ymeh4c9j#pip_shared_dirs

[tool.oxt.token]
# in the form of "token_name": "token_value"
# in the files the token will have a prefix and suffix of ___
pip_wheel_url = "https://files.pythonhosted.org/packages/ef/7d/500c9ad20238fcfcb4cb9243eede163594d7020ce87bd9610c9e02771876/pip-24.3.1-py3-none-any.whl" # https://tinyurl.com/ymeh4c9j#pip_wheel_url
test_internet_url = "https://duckduckgo.com" # https://tinyurl.com/ymeh4c9j#test_internet_url
log_pip_installs = false # https://tinyurl.com/ymeh4c9j#log_pip_installs
lo_identifier = "com.github.amourspirit.extensions.librepythonista" # https://tinyurl.com/ymeh4c9j#lo_identifier
lo_implementation_name = "LibrePythonista" # https://tinyurl.com/ymeh4c9j#lo_implementation_name
display_name = "LibrePythonista" # https://tinyurl.com/ymeh4c9j#display_name
description = "Extension for adding Python and Pip package management inside of LibreOffice" # https://tinyurl.com/ymeh4c9j#description
publisher = "AmourSpirit" # https://tinyurl.com/ymeh4c9j#publisher
publisher_url = "https://github.com/Amourspirit/python_libreoffice_ext" # https://tinyurl.com/ymeh4c9j#publisher_url
update_url_xml = "https://raw.githubusercontent.com/Amourspirit/python_libreoffice_ext/main/___dist_dir___/___update_file___" # https://tinyurl.com/ymeh4c9j#update_url_xml
update_url_oxt = "https://raw.githubusercontent.com/Amourspirit/python_libreoffice_ext/main/___dist_dir___/___oxt_name___.oxt" # https://tinyurl.com/ymeh4c9j#update_url_oxt
url_pip = 'https://bootstrap.pypa.io/get-pip.py' # https://tinyurl.com/ymeh4c9j#url_pip
# set log_file to "" to disable logging
log_file = "libre_pythonista.log" # https://tinyurl.com/ymeh4c9j#log_file
log_name = "LibrePythonista Installer" # https://tinyurl.com/ymeh4c9j#log_name
log_level = "INFO" # NONE, DEBUG, INFO, WARNING, ERROR, CRITICAL https://tinyurl.com/ymeh4c9j#log_level
log_format = "%(asctime)s - %(levelname)s - %(name)s: %(message)s" # https://tinyurl.com/ymeh4c9j#log_format
# log_format = "%(asctime)s - %(levelname)s - %(indent_str)s%(name)s: %(message)s"
log_add_console = true # should be false for production # https://tinyurl.com/ymeh4c9j#log_add_console
lo_pip = "libre_pythonista" # https://tinyurl.com/ymeh4c9j#lo_pip
platform = "all" # https://tinyurl.com/ymeh4c9j#platform
startup_event = "OnStartApp" # OnStartApp or onFirstVisibleTask https://tinyurl.com/ymeh4c9j#startup_event
show_progress = true # https://tinyurl.com/ymeh4c9j#show_progress
delay_startup = true # determines if installing waits fo the window to load before installing https://tinyurl.com/ymeh4c9j#delay_startup
float_dialog_error = "dialogs/log_dock.xdl"
float_dialog_error_num = "9809"
libreoffice_debug_port = 5678
lp_debug_port = 5679
lp_experimental_editor=false

[tool.oxt.requirements]
# https://tinyurl.com/ymeh4c9j#tooloxtrequirements
# https://python-poetry.org/docs/dependency-specification/
odfpy = ">=1.4"
ooo-dev-tools = ">=0.53.3"
seaborn = ">=0.13"
sortedcontainers = ">=2.4.0"
debugpy = ">=1.8"

[[tool.oxt.py_packages]]
# https://tinyurl.com/ymeh4c9j#tooloxtpy_packages
name="typing-extensions"
version="4.12.2"

[[tool.oxt.py_packages]]
name="verr"
version="1.1.2"


[[tool.oxt.py_packages]]
# https://amour_spirit.pyscriptapps.com/version-runner/latest/
name="pandas"
version="2.0"
restriction="~"
platforms=["all"]
python_versions=["<=3.9"]

[[tool.oxt.py_packages]]
name="pandas"
version="2.2"
restriction=">="
platforms=["all"]
python_versions=[">=3.9"]

[[tool.oxt.py_packages]]
name="matplotlib"
version="3.7.0"
restriction="~"
platforms=["all"]
python_versions=["<3.9"]

[[tool.oxt.py_packages]]
name="matplotlib"
version="3.9.0"
restriction="~"
platforms=["all"]
python_versions=[">=3.9", "<3.10"]

[[tool.oxt.py_packages]]
name="matplotlib"
version="3.10.0"
restriction=">="
platforms=["all"]
python_versions=[">=3.10"]


[[tool.oxt.lp_editor_py_packages]]
name="librepythonista-python-editor"
version="0.1.8"
platforms=["all"]
ignore_platforms=["flatpak", "snap"]


[tool.oxt.isolate]
# https://tinyurl.com/ymeh4c9j#tooloxtisolate
windows = ["pandas", "matplotlib", "seaborn", "lxml", "pillow", "numpy", "kivy"]

[tool.oxt.preinstall.pure]
# https://tinyurl.com/ymeh4c9j#tooloxtpreinstallpure
# verr = ">=1.1.2"

[tool.oxt.locale.publisher]
# https://tinyurl.com/ymeh4c9j#tooloxtlocalepublisher
en = { name = "___publisher___", url="___publisher_url___" }
fr = { name = "AmourEsprit", url="___publisher_url___/fr" }

[tool.oxt.locale.name]
# https://tinyurl.com/ymeh4c9j#tooloxtlocalename
en = "___display_name___"
fr = "Modèle LibrePythonista"
de = "LibrePythonista Vorlage"
pt = "Modelo LibrePythonista"
es = "Plantilla LibrePythonista"

[tool.oxt.locale.desc]
# https://tinyurl.com/ymeh4c9j#tooloxtlocaledesc
en = "___description___"
fr = "Extension pour ajouter la gestion des packages Python et Pip à l'intérieur de LibreOffice"
de = "rweiterung zur Verwaltung von Python- und Pip-Paketen in LibreOffice"
pt = "Extensão para adicionar gerenciamento de pacotes Python e Pip dentro do LibreOffice"
es = "Extensión para agregar administración de paquetes Python y Pip dentro de LibreOffice"


[tool.oxt.bz2.32_bit]
"3.8" = { url = "https://www.python.org/ftp/python/3.8.10/python-3.8.10-embed-win32.zip", md5="659adf421e90fba0f56a9631f79e70fb" }
"3.9" = { url = "https://www.python.org/ftp/python/3.9.13/python-3.9.13-embed-win32.zip", md5="fec0bc06857502a56dd1aeaea6488ef8" }
"3.10" = { url = "https://www.python.org/ftp/python/3.10.11/python-3.10.11-embed-win32.zip", md5="fee70dae06c25c60cbe825d6a1bfda57" }
"3.11" = { url = "https://www.python.org/ftp/python/3.11.6/python-3.11.6-embed-win32.zip", md5="d035d12d72e2d62b6e5219ea8f3bda39" }
"3.12" = { url = "https://www.python.org/ftp/python/3.12.7/python-3.12.7-embed-win32.zip", md5="21a051ecac4a9a25fab169793ecb6e56" }
"3.13" = { url = "https://www.python.org/ftp/python/3.13.0/python-3.13.0rc3-embed-win32.zip", md5="02d47e6085ae8921d83fe937ec2c6590" }

[tool.oxt.bz2.64_bit]
"3.8" = { url = "https://www.python.org/ftp/python/3.8.10/python-3.8.10-embed-amd64.zip", md5="3acb1d7d9bde5a79f840167b166bb633" }
"3.9" = { url = "https://www.python.org/ftp/python/3.9.13/python-3.9.13-embed-amd64.zip", md5="57731cf80b1c429a0be7133266d7d7cf" }
"3.10" = { url = "https://www.python.org/ftp/python/3.10.11/python-3.10.11-embed-amd64.zip", md5="f1c0538b060e03cbb697ab3581cb73bc" }
"3.11" = { url = "https://www.python.org/ftp/python/3.11.6/python-3.11.6-embed-amd64.zip", md5="ff5f34b8d2504c49fc94ffc29998b8a0" }
"3.12" = { url = "https://www.python.org/ftp/python/3.12.7/python-3.12.7-embed-amd64.zip", md5="4c0a5a44d4ca1d0bc76fe08ea8b76adc" }
"3.13" = { url = "https://www.python.org/ftp/python/3.13.0/python-3.13.0rc3-embed-amd64.zip", md5="93d8329cd1c8d09f64c28191942c11ce" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-dotenv>=0.5.2",
    "pytest>=8.3.4",
    "oooscript>=2.1.1",
    "lxml>=5.3.0",
    "debuggy>=3.0.1",
    "oooenv>=0.2.4",
    "matplotlib>=3.7.5",
    "pytest-mock>=3.14.0",
    "viztracer>=0.16.3",
    "pandas>=2",
]

[tool.hatch.build]
include = [
    "build/**/*",
]


[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    no-name-in-module,
    no-self-argument
"""

[tool.pyright]
include = ["src"]
reportMissingModuleSource = false

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/

ignore = ["E501"]
show-fixes = true
target-version = "py38"
line-length = 119

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    "tmp",
]
src = ["otx", "src"]

[tool.ruff.lint]
select = ["ANN", "C4", "N", "SIM"]
ignore = []

[tool.ruff.format]
exclude = ["tmp", ".devcontainer", ".githooks", ".github", ".hypothesis", ".idea", ".pytest_cache", ".venv", ".vscode", "cmds", "dist", "docs", "*.pyi"]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.pytest.ini_options]
testpaths = ["tests"]

markers = [
    "skip_headless: skips a test in headless mode",
    "skip_not_headless_os: skips a test in GUI mode for give os",
]
